<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.compaq.appname.MainActivity">


    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:alpha="0.3"
            android:src="@mipmap/background"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp" />
        <ImageView
            android:id="@+id/basketimage"

            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/blueb"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/myapp1"
            android:textColor="@color/green"
            android:typeface="sans"

            android:layout_below="@+id/basketimage"

            android:layout_marginLeft="127dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />
        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/myapp2"
            android:textColor="@color/black"
            android:typeface="sans"
            android:layout_toRightOf="@+id/text3"
            android:layout_below="@+id/basketimage"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />
        <RelativeLayout
            android:id="@+id/zeropair"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_below="@id/text3"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp"
            android:background="@drawable/facestyle">

            <ImageButton
                android:id="@+id/imageButton0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:src="@mipmap/fbook"
                android:background="@color/blue"/>

            <!--does not change color below in button textcolor att-->

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:padding="15dp"
                android:textSize="15dp"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:hint="@string/face"
                android:layout_toRightOf="@+id/imageButton0"
                android:textAlignment="center"
                android:gravity="center"

                />


        </RelativeLayout>

        <RelativeLayout
           android:id="@+id/firstpair"
            android:layout_marginTop="7dp"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_below="@id/zeropair"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
           tools:layout_editor_absoluteY="0dp"
           tools:layout_editor_absoluteX="0dp"
            android:background="@drawable/edittext">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name" />

            <EditText
                android:id="@+id/secondText1"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_toRightOf="@+id/imageButton1"
                android:textAlignment="center"
                android:gravity="center"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="173dp"


                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/secondpair"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/firstpair"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/edittext">


            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/biglock"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@+id/imageButton2"
                android:textAlignment="center"
                android:gravity="center"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="173dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:layout_marginTop="7dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_below="@id/secondpair"
            android:background="@color/green"
            android:textColor="@color/white"
            android:textStyle="bold"

            />

        <RelativeLayout
            android:id="@+id/lastpair"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="7dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">
            <TextView
                android:id="@+id/text_view_id1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/no_reg"
                android:textColor="@color/black"
                android:layout_alignParentBottom="true"


                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp" />

            <TextView

                android:id="@+id/text_view_id2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sig"
                android:textColor="@color/blue"
                android:layout_toRightOf="@+id/text_view_id1"
                android:layout_marginLeft="5dp"
                android:layout_alignParentBottom="true"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp" />

        </RelativeLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
